--- a/index.html
+++ b/index.html
@@ -1,134 +1,109 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Évolution des valeurs wARENH et woARENH</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: "Segoe UI", sans-serif;
-      background: #ffffff;
-      color: #333;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
+<!-- index.html complet et stylé - à coller sur GitHub Pages ou WordPress -->
 
-    .container {
-      background: #f9f9f9;
-      border-radius: 20px;
-      padding: 40px;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.08);
-      max-width: 900px;
-      width: 100%;
-    }
+<!-- Intégration de Chart.js -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    h2 {
-      text-align: center;
-      color: #5a52ff;
-      font-size: 28px;
-      margin-bottom: 40px;
-    }
+<!-- Conteneur responsive -->
+<div style="max-width: 900px; margin: 40px auto; padding: 20px; background-color: #ffffff; border-radius: 16px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); font-family: 'Segoe UI', sans-serif;">
+  <h2 style="color: #5a52ff; text-align: center; font-size: 24px; margin-bottom: 30px;">
+    📈 Evolution des données énergie - Actualisé chaque jour
+  </h2>
 
-    canvas {
-      max-width: 100%;
-      height: auto;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h2>📊 Évolution des valeurs wARENH et woARENH</h2>
-    <canvas id="graphCanvas"></canvas>
+  <div style="position: relative; height: 400px;">
+    <canvas id="papernestChart"></canvas>
   </div>
+</div>
 
-  <script>
-    async function fetchData() {
-      const response = await fetch("https://script.google.com/macros/s/AKfycbw6Qq8nng7mKnoT9C_LCmpvd6JekQTYe9WMl5LWjubq5itj-nsPDPSxYem9TKs3Ddhn/exec");
-      const data = await response.json();
+<script>
+// Ton lien Apps Script JSON (DOIT être public et bien configuré)
+const url = "https://script.google.com/macros/s/AKfycbw6Qq8nng7mKnoT9C_LCmpvd6JekQTYe9WMl5LWjubq5itj-nsPDPSxYem9TKs3Ddhn/exec";
 
-      const labels = data.map(item => item.date);
-      const wARENH = data.map(item => parseFloat(item.wARENH));
-      const woARENH = data.map(item => parseFloat(item.woARENH));
+fetch(url)
+  .then(response => response.json())
+  .then(data => {
+    const labels = [];
+    const wARENH = [];
+    const woARENH = [];
 
-      const ctx = document.getElementById("graphCanvas").getContext("2d");
+    data.forEach(row => {
+      labels.push(row.Time);
+      wARENH.push(parseFloat(row.wARENH));
+      woARENH.push(parseFloat(row.woARENH));
+    });
 
-      new Chart(ctx, {
-        type: "line",
-        data: {
-          labels: labels,
-          datasets: [
-            {
-              label: "wARENH",
-              data: wARENH,
-              borderColor: "#5a52ff",
-              backgroundColor: "rgba(90, 82, 255, 0.1)",
-              tension: 0.4,
-              fill: true,
-            },
-            {
-              label: "woARENH",
-              data: woARENH,
-              borderColor: "#0fc4b2",
-              backgroundColor: "rgba(15, 196, 178, 0.1)",
-              tension: 0.4,
-              fill: true,
-            }
-          ]
-        },
-        options: {
-          responsive: true,
-          plugins: {
-            legend: {
-              position: "bottom",
-              labels: {
-                color: "#333",
-                font: {
-                  size: 14
-                }
+    const ctx = document.getElementById('papernestChart').getContext('2d');
+    new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: labels,
+        datasets: [
+          {
+            label: 'Avec ARENH',
+            data: wARENH,
+            borderColor: '#0fc4b2',
+            backgroundColor: 'rgba(15, 196, 178, 0.1)',
+            borderWidth: 3,
+            tension: 0.3,
+            fill: true
+          },
+          {
+            label: 'Sans ARENH',
+            data: woARENH,
+            borderColor: '#ff6c95',
+            backgroundColor: 'rgba(255, 108, 149, 0.1)',
+            borderWidth: 3,
+            tension: 0.3,
+            fill: true
+          }
+        ]
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: {
+          legend: {
+            position: 'top',
+            labels: {
+              color: '#333',
+              font: {
+                size: 14
               }
-            },
-            tooltip: {
-              mode: "index",
-              intersect: false,
-              backgroundColor: "#ff6c95",
-              titleColor: "#fff",
-              bodyColor: "#fff"
             }
           },
-          scales: {
-            x: {
-              title: {
-                display: true,
-                text: "Date",
-                color: "#333"
-              },
-              ticks: {
-                color: "#666"
-              }
-            },
-            y: {
-              title: {
-                display: true,
-                text: "Valeurs",
-                color: "#333"
-              },
-              ticks: {
-                color: "#666"
-              },
-              beginAtZero: true
+          tooltip: {
+            mode: 'index',
+            intersect: false
+          }
+        },
+        interaction: {
+          mode: 'nearest',
+          axis: 'x',
+          intersect: false
+        },
+        scales: {
+          x: {
+            ticks: { color: '#5a52ff' },
+            title: {
+              display: true,
+              text: 'Semestres',
+              color: '#5a52ff'
             }
+          },
+          y: {
+            ticks: { color: '#5a52ff' },
+            title: {
+              display: true,
+              text: 'Prix en c€/kWh',
+              color: '#5a52ff'
+            },
+            beginAtZero: false
           }
         }
-      });
-    }
-
-    fetchData();
-  </script>
-</body>
-</html>
-
+      }
+    });
+  })
+  .catch(error => {
+    console.error("Erreur lors du chargement des données :", error);
+  });
+</script>
 
